# citro3d-testing

./: .gitignore  CMakeLists.txt
include/: buffer.hpp  data.hpp  drawcommand.hpp  exception.hpp  font.hpp  fontmodule.hpp  framebuffer.hpp  glyphdata.hpp  graphics.hpp  math.hpp  matrix.hpp  object.hpp  pixelformat.hpp  quad.hpp  rasterizer.hpp  renderer.hpp  shader.hpp  strongreference.hpp  texture.hpp  timer.hpp  vertex.hpp
include/polyline/: polyline.hpp
include/polyline/types/: beveljoin.hpp  miterjoin.hpp  nonejoin.hpp
shaders/: main.v.pica
source/: exception.cpp  font.cpp  fontmodule.cpp  framebuffer.cpp  glyphdata.cpp  graphics.cpp  main.cpp  matrix.cpp  object.cpp  pixelformat.cpp  quad.cpp  rasterizer.cpp  renderer.cpp  shader.cpp  texture.cpp  timer.cpp  type.cpp
source/polyline/: polyline.cpp
source/polyline/types/: beveljoin.cpp  miterjoin.cpp  nonejoin.cpp
